--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,4 +27,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
-        flake8 . --max-doc-length 72
+        flake8 . --max-doc-length 72 --show-source
