--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,11 +20,16 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.8"
-    - name: Install dependencies
+    - name: Upgrade pip
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install Poetry
+      uses: snok/install-poetry@v1
+    - name: Install dependencies
+      run: poetry install --with dev
     - name: Lint with flake8
       run: |
-        flake8 . --max-doc-length 72 --show-source
+        poetry run flake8 . --max-doc-length 72 --show-source
+    - name: Test with pytest
+      run: |
+        poetry run pytest
