--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,12 +14,18 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      max-parallel: 1
+      fail-fast: false
+      matrix:
+         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.8
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        python-version: "3.8"
+        python-version: "${{ matrix.python-version }}"
     - name: Upgrade pip
       run: |
         python -m pip install --upgrade pip
