Tests: Tests for image endpoint
Add tests for updating image information, adding image to favorite list.
Add `faker` for fixtures (dev dependency).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.7"
 pytest = "^7.3.1"
 jinja2 = "^3.1"
 flake8 = "*"
+faker = "^18.10.1"
 
 [build-system]
 requires = ["poetry-core"]
