--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyimgurapi"
-version = "0.4.3"
+version = "0.4.4"
 description = "A Python SDK for the Imgur API."
 authors = ["nautics889 <cyberukr@gmail.com>"]
 license = "MIT"
@@ -17,8 +17,10 @@ python = "^3.7"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
 jinja2 = "^3.1"
+pre-commit = ">=2.0.0,<4.0.0"
 flake8 = "*"
 faker = "^18.10.1"
+black = "^23.3.0"
 
 [build-system]
 requires = ["poetry-core"]
